--- a/notification-service/pom.xml
+++ b/notification-service/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.ibatulanand</groupId>
-        <artifactId>ecommerce-microservices</artifactId>
+        <groupId>com.balaji</groupId>
+        <artifactId>smartshop-microservices</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
